--- a/index.html
+++ b/index.html
@@ -3,44 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Translation Books - Playground</title>
+  <title>Playground Translation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 2em; }
-    h1 { text-align: center; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 0.5em; border-bottom: 1px solid #ccc; text-align: left; }
-    a { color: #0645ad; }
+    body {
+      font-family: 'Noto Serif', serif;
+      background: #f4f4f4;
+      margin: 0;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      padding: 2em 0;
+      background: #3f51b5;
+      color: white;
+    }
+    header img {
+      max-width: 200px;
+      border-radius: 4px;
+      margin-top: 1em;
+    }
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 2em auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1.5em;
+    }
+    .book {
+      background: white;
+      border-radius: 6px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 1em;
+      text-align: center;
+    }
+    .book img {
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
+    .links {
+      margin-top: 0.5em;
+    }
+    .links a {
+      display: inline-block;
+      margin: 0 0.5em;
+      color: #3f51b5;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <h1>Playground Translation (中文)</h1>
-  <p>This site hosts the Chinese translation of Richard Powers's <em>Playground</em>, translated by Jolly Sammy.</p>
-  <table>
-    <thead>
-      <tr><th>PDF</th><th>View</th><th>Download</th></tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Translation—Playground 1-2</td>
-        <td><a href="Translation—Playground_1-2.pdf" target="_blank">View</a></td>
-        <td><a href="Translation—Playground_1-2.pdf" download>Download</a></td>
-      </tr>
-      <tr>
-        <td>Translation—Playground 3-4</td>
-        <td><a href="Translation—Playground_3-4.pdf" target="_blank">View</a></td>
-        <td><a href="Translation—Playground_3-4.pdf" download>Download</a></td>
-      </tr>
-      <tr>
-        <td>Translation—Playground 5-6</td>
-        <td><a href="Translation—Playground_5-6.pdf" target="_blank">View</a></td>
-        <td><a href="Translation—Playground_5-6.pdf" download>Download</a></td>
-      </tr>
-      <tr>
-        <td>Translation—Playground 7-8</td>
-        <td><a href="Translation—Playground_7-8.pdf" target="_blank">View</a></td>
-        <td><a href="Translation—Playground_7-8.pdf" download>Download</a></td>
-      </tr>
-    </tbody>
-  </table>
+  <header>
+    <h1>Playground 中文翻译</h1>
+    <p>Translated by Jolly Sammy · Story by Richard Powers</p>
+    <img src="playground-book.jpg" alt="Playground cover">
+  </header>
+  <div class="container">
+    <div class="book">
+      <img src="playground-book.jpg" alt="cover">
+      <div class="links">
+        <a href="Translation—Playground_1-2.pdf" target="_blank">View</a>
+        <a href="Translation—Playground_1-2.pdf" download>Download</a>
+      </div>
+    </div>
+    <div class="book">
+      <img src="playground-book.jpg" alt="cover">
+      <div class="links">
+        <a href="Translation—Playground_3-4.pdf" target="_blank">View</a>
+        <a href="Translation—Playground_3-4.pdf" download>Download</a>
+      </div>
+    </div>
+    <div class="book">
+      <img src="playground-book.jpg" alt="cover">
+      <div class="links">
+        <a href="Translation—Playground_5-6.pdf" target="_blank">View</a>
+        <a href="Translation—Playground_5-6.pdf" download>Download</a>
+      </div>
+    </div>
+    <div class="book">
+      <img src="playground-book.jpg" alt="cover">
+      <div class="links">
+        <a href="Translation—Playground_7-8.pdf" target="_blank">View</a>
+        <a href="Translation—Playground_7-8.pdf" download>Download</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
